apps/monitoring/09-prometheus-auth-ingress.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: prometheus-lb
#   namespace: monitoring
# spec:
#   type: LoadBalancer
#   loadBalancerIP: 192.168.63.215
#   selector:
#     app: prometheus
#   ports:
#     - name: http
#       port: 80
#       targetPort: http

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus-tailscale
#   namespace: monitoring
#   #annotations:
#   #  tailscale.com/funnel: "true"
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: prometheus
#       port:
#         number: 9090
#   tls:
#     - hosts:
#         - prometheus

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-forward-auth
spec:
  forwardAuth:
    address: http://prometheus-oauth2-proxy.monitoring.svc.cluster.local:4180/

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-oauth2
  annotations:
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prometheus.lab
      secretName: prometheus-lab-tls
  rules:
    - host: prometheus.lab
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: prometheus-oauth2-proxy
                port:
                  number: 4180

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-prometheus-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prometheus.lab
      secretName: prometheus-lab-tls
  rules:
    - host: prometheus.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
